fix: header missing search icon on mobile and SEO improvements

--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -53,3 +53,10 @@
 .schedule-info{
   font-size: 12px;
 }
+
+.footer-logo{
+  height: 24px; 
+  width: 149px; 
+  margin-left: auto; 
+  margin-right: auto;
+}
