--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -19,9 +19,16 @@
     padding-top: 4px;
   }
 
+  .mobile-search{
+    display: none;
+  }
+
   @media (max-width: 992px) {
     .nav-item-search{
-      text-align: left !important;
+      display: none;
+    }
+    .mobile-search{
+      display: block;
     }
   }
 
@@ -61,4 +68,20 @@
 }
 .nav-link{
   color: #333333;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+@media (max-width: 769px) {
+  .px-sm{
+    padding: 0px 24px;
+  }
+}
+
+@media (max-width: 300px) {
+  .px-sm{
+    padding: 0px 10px;
+  }
 }
